# uutils

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  library.json
.github/workflows/: build-cmake.yml
examples/uproto/node/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json  tslint.json
examples/uproto/node/src/: index.ts
examples/uproto/node/src/api/: devicesApi.ts  index.ts
examples/uproto/node/src/models/: communication_log.ts  device.ts
examples/uproto/node/src/services/: serial-communication.ts  uproto-communication.ts  uproto-emulator.ts  uproto.service.ts
examples/uproto/node/src/uutils/: dynamic_value.ts  uproto.ts
examples/uproto/node/src/uutils/uproto/: message.ts  parser.ts  runtime.ts  version.ts
examples/uproto/node/src/views/: index.hbs
examples/uproto/node/src/views/devices/: device.hbs
examples/uproto/node/src/views/layouts/: main.hbs
examples/uproto/node/test/: test_core.ts
examples/uproto/node/test/uutils/: dynamic_value.test.ts
examples/uproto/python/: uproto.py  uutils.py
include/uutils/: checksum.h  checksum.hpp  common.h  dynamic_value.h  dynamic_value.hpp  fifo.h  fifo.hpp  memory_debug.h
include/uutils/uproto/: core.h  message.h  parser.h  runtime.h  uproto.h  version.h
py/: dynamic_value.py  main.py  uproto.py
src/: CMakeLists.txt
src/uutils/: checksum.c  checksum.cpp  common.c  dynamic_value.c  dynamic_value.cpp  fifo.c  fifo.cpp  memory_debug.cpp
src/uutils/uproto/: message.c  parser.c  runtime.c  uproto.c  version.c
tests/: CMakeLists.txt  main.cpp
tests/uutils/: test_checksum.cpp  test_core.cpp  test_core.hpp  test_dynamic_value.cpp  test_fifo.cpp
tests/uutils/uproto/: test_uproto.cpp  test_uproto_message.cpp  test_uproto_parser.cpp  test_uproto_runtime.cpp
